--- a/schedule_manager/static/css/custom.css
+++ b/schedule_manager/static/css/custom.css
@@ -14,22 +14,41 @@
 
 .main-plot{
 	display: grid;
-	grid-template-columns: repeat(auto-fill, 0.25rem);
-	grid-auto-columns: 0.25rem;
+	grid-template-columns: repeat(auto-fill, 0.125rem);
+	grid-auto-columns: 0.125rem;
 	grid-auto-rows: 4rem;
 }
+
+/*
+.can-scale{
+	transform: scale(0.5,1);
+	transform-origin: left;
+}
+*/
 
 .timebtn{
 	display: flex;
 	align-items: center;
-	height: 1rem;
+	height: 2rem;
 	border-width: 1px;
 	border-color: black;
 	color:blanchedalmond;
-	font-size: .75rem;
+	font-size: .65rem;
+	font-weight: 600;
 	background-color: #718096;
 }
 .timebtn:nth-child(even) {
 	color:black;
 	background-color: #a0aec0;
+}
+
+
+.flight{
+	border-width: 1px;
+	border-color: #2b6cb0;
+	border-radius: .125rem;
+	background-color: #68d391;
+	height:1.8rem;
+	margin-top: 0.25rem;
+	cursor: pointer;
 }
