--- a/schedule_manager/static/css/custom.css
+++ b/schedule_manager/static/css/custom.css
@@ -14,7 +14,7 @@
 
 .main-plot{
 	display: grid;
-	grid-template-columns: repeat(auto-fill, 0.125rem);
+	grid-template-columns: repeat(autofill, 0.125rem);
 	grid-auto-columns: 0.125rem;
 	grid-auto-rows: 4rem;
 }
@@ -26,6 +26,7 @@
 }
 */
 
+/*	TIMELINE button */
 .timebtn{
 	display: flex;
 	align-items: center;
@@ -42,13 +43,78 @@
 	background-color: #a0aec0;
 }
 
-
+/*	FLIGHTS */
 .flight{
+	display: flex;
+	justify-content: center;
 	border-width: 1px;
 	border-color: #2b6cb0;
 	border-radius: .125rem;
 	background-color: #68d391;
-	height:1.8rem;
+	height:1.6rem;
 	margin-top: 0.25rem;
+	font-size: 0.75rem;
+	font-weight: 600;
 	cursor: pointer;
 }
+
+/* LABELS */
+.label-from{
+	margin-top: 1.8rem;
+	margin-bottom: 1rem;
+	background-color: #e2e8f0;
+	font-size: .65rem;
+	height: 1rem;
+}
+.label-to{
+	margin-top: 1.8rem;
+	margin-bottom: 1rem;
+	background-color: #e2e8f0;
+	font-size: .65rem;
+	height: 1rem;
+}
+.operating-capt{
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 1.8rem;
+	margin-bottom: 1rem;
+	font-size: .65rem;
+	font-weight: 600;
+	margin-left: 2px;
+}
+
+/* The Modal (background) */
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  /* Modal Content/Box */
+  .modal-content {
+	background-color: #fefefe;
+	margin: 15% auto; /* 15% from the top and centered */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%; /* Could be more or less, depending on screen size */
+  }
+  /* The Close Button */
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+  }
